--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-	"name": "font-picker-react",
-	"version": "3.5.2",
+	"name": "@olegstankoptev/font-picker-react",
+	"version": "3.5.4",
 	"description": "Font selector component for Google Fonts",
 	"author": {
-		"name": "Samuel Meuli",
-		"email": "me@samuelmeuli.com",
-		"url": "https://samuelmeuli.com"
+		"name": "Oleg Koptev",
+		"email": "olegstankoptev@gmail.com"
 	},
-	"repository": "github:samuelmeuli/font-picker-react",
-	"homepage": "https://font-picker.samuelmeuli.com",
 	"license": "MIT",
 	"keywords": [
 		"fonts",
